--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="uft-8">
-    <title> calistenics </title>
-  </head>
-  <body>
-    <h1>
-      inicio
-    </h1>
-  </body>
+
+<head>
+  <meta charset="uft-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
+  <title> calistenics </title>
+</head>
+
+<body>
+  <h1 style="margin-bottom: 10px;">
+    inicio
+  </h1>
+  <div class="row">
+    <section class="col-lg-4">
+      <div class="content">
+        <div>titulo 1</div>
+        <p>parrafo 1</p>
+      </div>
+    </section>
+
+    <section class="col-lg-4">
+      <div class="content">
+        <div>titulo 1</div>
+        <p>parrafo 1</p>
+      </div>
+    </section>
+
+    <section class="col-lg-4">
+      <div class="content">
+        <div>titulo 1</div>
+        <p>parrafo 1</p>
+      </div>
+    </section>
+  </div>
+</body>
+
 </html>
