--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 </head>
 
 <body>
-  <h1 style="margin-bottom: 10px;">
-    inicio
+  <h1>
+    INICIO
   </h1>
   <div class="row">
-    <section class="col-lg-4">
+    <section class="col-lg-4 col-md-6 col-sm-12">
       <div class="content">
-        <div>titulo 1</div>
+        <div class="title">titulo 1</div>
         <p>parrafo 1</p>
       </div>
     </section>
 
-    <section class="col-lg-4">
+    <section class="col-lg-4 col-md-6 col-sm-12">
       <div class="content">
-        <div>titulo 1</div>
-        <p>parrafo 1</p>
+        <div class="title">titulo 2</div>
+        <p>parrafo 2</p>
       </div>
     </section>
 
-    <section class="col-lg-4">
+    <section class="col-lg-4 col-md-12 col-sm-12">
       <div class="content">
-        <div>titulo 1</div>
-        <p>parrafo 1</p>
+        <div class="title">titulo 3</div>
+        <p>parrafo 3</p>
       </div>
     </section>
   </div>
