--- a/index.html
+++ b/index.html
@@ -15,25 +15,24 @@
   <div class="row">
     <section class="col-lg-4 col-md-6 col-sm-12">
       <div class="content">
-        <div class="title">titulo 1</div>
+        <div class="title" style="background-color: yellow;">titulo 1</div>
         <p>parrafo 1</p>
       </div>
     </section>
 
     <section class="col-lg-4 col-md-6 col-sm-12">
       <div class="content">
-        <div class="title">titulo 2</div>
+        <div class="title" style="background-color: blue">titulo 2</div>
         <p>parrafo 2</p>
       </div>
     </section>
 
     <section class="col-lg-4 col-md-12 col-sm-12">
       <div class="content">
-        <div class="title">titulo 3</div>
+        <div class="title" style="background-color: red">titulo 3</div>
         <p>parrafo 3</p>
       </div>
     </section>
   </div>
 </body>
-
 </html>
