--- a/index.html
+++ b/index.html
@@ -10,27 +10,44 @@
 
 <body>
   <h1>
-    INICIO
+    MY WEB PAGE
   </h1>
   <div class="row">
     <section class="col-lg-4 col-md-6 col-sm-12">
       <div class="content">
-        <div class="title" style="background-color: yellow;">titulo 1</div>
-        <p>parrafo 1</p>
+        <div class="title" style="background-color: yellow;">What is Lorem Ipsum?</div>
+        <p>is simply dummy text of the printing and typesetting industry.
+           Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+             It has survived not only five centuries, but also the leap into electronic typesetting, 
+             remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset 
+             sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+              Aldus PageMaker including versions of Lorem Ipsum.</p>
       </div>
     </section>
 
     <section class="col-lg-4 col-md-6 col-sm-12">
       <div class="content">
-        <div class="title" style="background-color: blue">titulo 2</div>
-        <p>parrafo 2</p>
+        <div class="title" style="background-color: blue">Where does it come from?</div>
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+           Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
+            Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur,
+             from a Lorem Ipsum passage, and going through the cites of the word in classical literature,
+              discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of
+               "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, </p>
       </div>
     </section>
 
     <section class="col-lg-4 col-md-12 col-sm-12">
       <div class="content">
-        <div class="title" style="background-color: red">titulo 3</div>
-        <p>parrafo 3</p>
+        <div class="title" style="background-color: red">Why do we use it?</div>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+           looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution 
+           of letters, as opposed to using 'Content here, content here', making it look like readable English.
+            Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text,
+             and a search for 'lorem ipsum' will uncover many web sites still in their infancy. 
+             Various versions have evolved over the years, sometimes by accident, sometimes on purpose 
+             (injected humour and the like).</p>
       </div>
     </section>
   </div>
